...
import CoverflowExample from './tabView/CoverflowExample';
import ReanimatedOnPageScrollExample from './ReanimatedOnPageScrollExample';
import { createNativeStackNavigator } from '@react-navigation/native-stack';
import { LegacyBasicPagerViewExample } from './LegacyBasicPagerViewExample';

const examples = [
  { component: BasicPagerViewExample, name: 'Basic Example' },
  { component: KeyboardExample, name: 'Keyboard Example' },
  { component: OnPageScrollExample, name: 'OnPageScroll Example' },
  { component: OnPageSelectedExample, name: 'OnPageSelected Example' },
  { component: HeadphonesCarouselExample, name: 'Headphones Carousel Example' },
  { component: PaginationDotsExample, name: 'Pagination Dots Example' },
  {
    component: ScrollablePagerViewExample,
    name: 'Scrollable PagerView Example',
...

export function Navigation() {
  const [mode, setMode] = React.useState<'native' | 'js'>('native');
  const NavigationStack = mode === 'js' ? Stack : NativeStack;
  return (
    <NavigationContainer>
      <NavigationStack.Navigator initialRouteName="PagerView Example">
        <NavigationStack.Screen
          name="PagerView Example (Fabric)"
          component={App}
          options={{
            headerRight: () => (
              <Button
...
