...
} from 'react-native';

const MESSAGES = [
  'okay',
  'sudo make me a sandwich',
  'what? make it yourself',
  'make me a sandwich',
];

export default class Chat extends React.Component {
  render() {
    return (
      <View style={styles.container}>
...
