appId: ${APP_ID}
# tc43 The [Turn animations off] button can switch states between off and on any number of times
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'OnPageScroll Example'
- assertVisible: 'OnPageScroll Example'
- tapOn: 'Turn off animations'
- assertVisible: 'Turn animations back on'
- tapOn: 'Turn animations back on'
- assertVisible: 'Turn off animations'
- tapOn: 'Turn off animations'
