appId: com.pagerviewexample
# tc24 Keyboard Example screen with its elements is displayed correctly
---
- launchApp:
    appId: com.pagerviewexample
    clearState: "true"
    stopApp: "false"
- assertVisible: "PagerView Example"
- tapOn: "Keyboard Example"
- assertVisible: "Navigate up"
- assertVisible: "Keyboard Example"
- assertVisible: "First Question"
- assertVisible: "What is your favourite lib ?"
- assertVisible: "GO TO NEXT QUESTION"
- assertVisible: "Control"
- assertVisible: "Logs"
- assertVisible: "Scroll Disabled"
- assertVisible: "Turn off animations"
- assertVisible: "Overdrag Disabled"
- assertVisible: "ScrollState[ idle ]"
- assertVisible: "Start"
- assertVisible: "Prev"
- assertVisible: "Next"
- assertVisible: "Last"
- assertVisible: "Page 1 / 2 "
- tapOn: "Navigate up"