appId: org.reactjs.native.example.FabricExample
#  tc14 The [Prev] button is clickable until page one is reached (Page =1/X) 
---
- launchApp
- assertVisible: "PagerView Example"
- tapOn: "Basic Example"
- assertVisible: "Basic Example"
- tapOn: "Last"
- assertVisible: "page number 9"
- assertVisible: "Page 10 / 10 "
- assertVisible: "Prev"
- tapOn: "Prev"
- repeat:
    times: 8
    commands:
      - tapOn: "Prev"
- assertVisible: "page number 0"
- assertVisible: "Page 1 / 10 "
- tapOn: "Prev"
- assertVisible: "page number 0"
- assertVisible: "Page 1 / 10 "
- clearState