appId: org.reactjs.native.example.FabricExample
# tc28 The [Scroll Enabled] button can switch states between enabled to disabled and back any number of times
---
- launchApp
- assertVisible: "PagerView Example"
- tapOn: "Keyboard Example"
- assertVisible: "Keyboard Example"
- tapOn: "Scroll Disabled"
- tapOn: "Scroll Enabled"
- tapOn: "Scroll Disabled"
- tapOn: "Scroll Enabled"
- tapOn: "Scroll Disabled"
- tapOn: "Scroll Enabled"
- tapOn: "Scroll Disabled"
- tapOn: "Scroll Enabled"
- tapOn: "Scroll Disabled"
- tapOn: "Scroll Enabled"
- tapOn: "Scroll Disabled"
- tapOn: "Scroll Enabled"
- clearState