appId: ${APP_ID}
# tc32 The [Overdrag Disable] button can switch labels and states between disabled and enabled any number of times
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Keyboard Example'
- assertVisible: 'Keyboard Example'
- tapOn: 'Overdrag Disabled'
- assertVisible: 'Overdrag Enabled'
- tapOn: 'Overdrag Enabled'
- assertVisible: 'Overdrag Disabled'
- tapOn: 'Overdrag Disabled'
- assertVisible: 'Overdrag Enabled'
- tapOn: 'Overdrag Enabled'
- assertVisible: 'Overdrag Disabled'
- tapOn: 'Overdrag Disabled'
- assertVisible: 'Overdrag Enabled'
- tapOn: 'Overdrag Enabled'
- assertVisible: 'Overdrag Disabled'
- tapOn: 'Overdrag Disabled'
- assertVisible: 'Overdrag Enabled'
- tapOn: 'Overdrag Enabled'
- assertVisible: 'Overdrag Disabled'
- tapOn: 'Overdrag Disabled'
- assertVisible: 'Overdrag Enabled'
- tapOn: 'Overdrag Enabled'
- assertVisible: 'Overdrag Disabled'
- tapOn: 'Overdrag Disabled'
- assertVisible: 'Overdrag Enabled'
- tapOn: 'Overdrag Enabled'
- assertVisible: 'Overdrag Disabled'
- tapOn: 'Overdrag Disabled'
- assertVisible: 'Overdrag Enabled'
- tapOn: 'Overdrag Enabled'
- assertVisible: 'Overdrag Disabled'
- tapOn: 'Overdrag Disabled'
- assertVisible: 'Overdrag Enabled'
- tapOn: 'Overdrag Enabled'
- assertVisible: 'Overdrag Disabled'
