appId: ${APP_ID}
# tc45 The [Prev] button is clickable until page one is reached (Page =1/X)
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'OnPageScroll Example'
- tapOn: 'Last'
- assertVisible: 'Page Index: 4'
- repeat:
    times: 4
    commands:
      - tapOn: 'Prev'
- assertVisible: 'Page Index: 0'
- assertVisible: 'Page 1 / 5 '
