appId: org.reactjs.native.example.FabricExample
#  tc117 All the links placed in the navigation bar are active
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/regression TC iOS/auto width tab bar example/tc115_AutoWidthTabBarExample.yaml
- tapOn: "Article"
- tapOn: "Contacts"
- tapOn: "Albums"
- tapOn: "Chat"
- tapOn: "long long long title"
- tapOn: "medium title"
- clearState