appId: ${APP_ID}
#  tc117 All the links placed in the navigation bar are active
---
- runFlow: tc115_AutoWidthTabBarExample.yaml
- tapOn: 'Article'
- tapOn: 'Contacts'
- tapOn: 'Albums'
- tapOn: 'Chat'
- tapOn: 'long long long title'
- tapOn: 'medium title'
